fixed mobile drop down menu sticking out into navbar

--- a/frontend/src/components/Navbar/Navbar.css
+++ b/frontend/src/components/Navbar/Navbar.css
@@ -62,16 +62,17 @@
     }
 
     .nav-menu {
-        display: flex;
-        flex-direction: column;
-        width: 100%;
-        height: 600px;
-        position: absolute;
-        top: 80px;
-        left: -100%;
-        opacity: 1;
-        transition: all 0.5s ease;
-    }
+    display: flex;
+    justify-content: flex-start; 
+    flex-direction: column;
+    width: 100%;
+    height: 68vh; 
+    position: absolute;
+    top: 80px;
+    left: -100%;
+    opacity: 1;
+    transition: all 0.5s ease;
+  }
 
     .nav-menu.active {
         background: #6668F4;
